--- a/ozguls20_bbl536e_homework2.ipynb
+++ b/ozguls20_bbl536e_homework2.ipynb
@@ -161,6 +161,159 @@
    "source": [
     "problem2('customer.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.preprocessing import MinMaxScaler,StandardScaler\n",
+    "def problem3(fileName):\n",
+    "    # Read dataset from given .csv file\n",
+    "    data=pd.read_csv(fileName)\n",
+    "    # Drop customerId column as said.\n",
+    "    data=data.drop(['customerID'],axis=1)\n",
+    "    # There are missing values in Totalcharges column. So we should drop that missing values.\n",
+    "    # But that column type was object, so we should convert that to numeric type\n",
+    "    data['TotalCharges']=data['TotalCharges'].apply(pd.to_numeric,errors='coerce')\n",
+    "    # Now we can find misssing values and drop them.\n",
+    "    data.dropna(inplace=True)\n",
+    "    # We should convert target to numeric, because its values are \"yes\" or \"no\" categorical data\n",
+    "    # yes=1 , no=0\n",
+    "    data['Churn'].replace(to_replace='Yes', value=1, inplace=True)\n",
+    "    data['Churn'].replace(to_replace='No',  value=0, inplace=True)\n",
+    "    # Split data to X and y (input and target)\n",
+    "    X=data.drop([\"Churn\"],axis=1)\n",
+    "    y=data['Churn'].values\n",
+    "    # Also, we should convert input values to numerical values.\n",
+    "    # we can use get_dummies function get rid of categorical values\n",
+    "    X=pd.get_dummies(X)\n",
+    "    # Define cross validation method with shuffling\n",
+    "    cv=KFold(n_splits=5,shuffle=True)\n",
+    "    # I create list which has all models. \n",
+    "    all_models=[LogisticRegression(max_iter=500),DecisionTreeClassifier(),LinearSVC(),KNeighborsClassifier(),MLPClassifier(max_iter=1000)]\n",
+    "    # Now, we should scale data, because some model sensitive to scaling like KNN\n",
+    "    features = X.columns.values\n",
+    "    scaler = MinMaxScaler(feature_range = (0,1))\n",
+    "    scaler.fit(X)\n",
+    "    X = pd.DataFrame(scaler.transform(X))\n",
+    "    X.columns = features\n",
+    "    # the train_scores list will hold each train score in cross validation.\n",
+    "    train_scores=[]\n",
+    "    # the test_scores list will hold each test score in cross validation. \n",
+    "    test_scores=[]\n",
+    "    # train_scores_mean list will hold each model's train score means.\n",
+    "    train_scores_mean=[]\n",
+    "    # test_scores_mean list will hold each model's test score means.\n",
+    "    test_scores_mean=[]\n",
+    "    # Outer loop iterates each models\n",
+    "    for models in all_models:\n",
+    "        # Inner loop iterates each splitted data.\n",
+    "        for train,test in cv.split(X,y):\n",
+    "            # Feed data to model.\n",
+    "            model=models.fit(X.values[train],y[train])\n",
+    "            # Get score for train sets\n",
+    "            train_score=model.score(X.values[train],y[train])\n",
+    "            # Get score for test sets\n",
+    "            test_score=model.score(X.values[test],y[test])\n",
+    "            # Add score to lists\n",
+    "            train_scores.append(train_score)\n",
+    "            test_scores.append(test_score)\n",
+    "        # Get means of scores then add final list for each modelos\n",
+    "        train_scores_mean.append(np.mean(np.array(train_scores)))\n",
+    "        test_scores_mean.append(np.mean(np.array(test_scores)))\n",
+    "        test_scores.clear()\n",
+    "        train_scores.clear()\n",
+    "    # To print scores create a dataframe\n",
+    "    df1=pd.DataFrame({\"models\":[\"LogisticRegression\",\n",
+    "                            \"DecisionTreeClassifier\",\n",
+    "                            \"LinearSVC\",\n",
+    "                            \"KNeighborsClassifier\",\n",
+    "                            \"MLPClassifier\"],\n",
+    "                \"train\":train_scores_mean,\n",
+    "                \"test\":test_scores_mean})\n",
+    "    left_aligned_df = df1.style.set_properties(**{'text-align': 'left'})\n",
+    "    display(left_aligned_df.hide_index())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_43532/1986991575.py:75: FutureWarning: this method is deprecated in favour of `Styler.hide(axis='index')`\n",
+      "  display(left_aligned_df.hide_index())\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "#T_e9335_row0_col0, #T_e9335_row0_col1, #T_e9335_row0_col2, #T_e9335_row1_col0, #T_e9335_row1_col1, #T_e9335_row1_col2, #T_e9335_row2_col0, #T_e9335_row2_col1, #T_e9335_row2_col2, #T_e9335_row3_col0, #T_e9335_row3_col1, #T_e9335_row3_col2, #T_e9335_row4_col0, #T_e9335_row4_col1, #T_e9335_row4_col2 {\n",
+       "  text-align: left;\n",
+       "}\n",
+       "</style>\n",
+       "<table id=\"T_e9335\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th id=\"T_e9335_level0_col0\" class=\"col_heading level0 col0\" >models</th>\n",
+       "      <th id=\"T_e9335_level0_col1\" class=\"col_heading level0 col1\" >train</th>\n",
+       "      <th id=\"T_e9335_level0_col2\" class=\"col_heading level0 col2\" >test</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td id=\"T_e9335_row0_col0\" class=\"data row0 col0\" >LogisticRegression</td>\n",
+       "      <td id=\"T_e9335_row0_col1\" class=\"data row0 col1\" >0.805354</td>\n",
+       "      <td id=\"T_e9335_row0_col2\" class=\"data row0 col2\" >0.804891</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_e9335_row1_col0\" class=\"data row1 col0\" >DecisionTreeClassifier</td>\n",
+       "      <td id=\"T_e9335_row1_col1\" class=\"data row1 col1\" >0.997867</td>\n",
+       "      <td id=\"T_e9335_row1_col2\" class=\"data row1 col2\" >0.729663</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_e9335_row2_col0\" class=\"data row2 col0\" >LinearSVC</td>\n",
+       "      <td id=\"T_e9335_row2_col1\" class=\"data row2 col1\" >0.804252</td>\n",
+       "      <td id=\"T_e9335_row2_col2\" class=\"data row2 col2\" >0.804041</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_e9335_row3_col0\" class=\"data row3 col0\" >KNeighborsClassifier</td>\n",
+       "      <td id=\"T_e9335_row3_col1\" class=\"data row3 col1\" >0.833938</td>\n",
+       "      <td id=\"T_e9335_row3_col2\" class=\"data row3 col2\" >0.755259</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_e9335_row4_col0\" class=\"data row4 col0\" >MLPClassifier</td>\n",
+       "      <td id=\"T_e9335_row4_col1\" class=\"data row4 col1\" >0.865081</td>\n",
+       "      <td id=\"T_e9335_row4_col2\" class=\"data row4 col2\" >0.775742</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x7fa26c1371f0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "problem3('WA_Fn-UseC_-Telco-Customer-Churn.csv')"
+   ]
   }
  ],
  "metadata": {
